--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -27,6 +27,7 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
+        <li><a href="{% url 'auth:login' %}" >Login</a></li>
       </ul>
     </nav>
   </header>
