--- a/authentication/templates/authentication/base.html
+++ b/authentication/templates/authentication/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Authentication{% endblock %}</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <style>
         body {
             min-height: 100vh;
@@ -70,7 +70,7 @@
         <div class="auth-header">
             <div class="auth-logo">
                 <a href="{% url 'core:home' %}">
-                    <img src="{% static 'core/images/logo.png' %}" alt="Logo">
+                    <img src="{% static 'images/logo.png' %}" alt="Logo">
                 </a>
             </div>
             <div class="auth-text">
