--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}Django Site{% endblock %}</title>
   {% load static %}
-  <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
   {% block extra_css %}{% endblock %}
 </head>
 <body>
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="{% static 'core/images/logo.png' %}" alt="Logo">
+        <img src="{% static 'images/logo.png' %}" alt="Logo">
         <span class="logo-text">{% block header %}{% endblock %}</span>
       </div>
       
