Implement Resend Verification email

--- a/authentication/templates/authentication/base.html
+++ b/authentication/templates/authentication/base.html
@@ -80,5 +80,7 @@
         </div>
         {% block content %}{% endblock %}
     </div>
+
+{% block extra_js %}{% endblock %}
 </body>
-</html> 
+</html>
