--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -47,6 +47,7 @@
         border-radius: 4px;
         font-size: 1rem;
         cursor: pointer;
+        margin-top: 10px;
     }
 
     .login-button:hover {
