--- a/authentication/templates/authentication/password_reset_done.html
+++ b/authentication/templates/authentication/password_reset_done.html
@@ -1,7 +1,13 @@
 {% extends 'authentication/base.html' %}
+
 {% block title %}Check Your Email{% endblock %}
 
+{% block header %}Password Reset Email Sent{% endblock %}
+{% block subheader %}Check your inbox for the reset link{% endblock %}
+
 {% block content %}
-  <h2>Password Reset Sent</h2>
-  <p>We've emailed you instructions for resetting your password.</p>
+  <div style="text-align: center;">
+    <p>We've emailed you instructions for resetting your password.</p>
+    <a href="{% url 'auth:login' %}" class="resend-button">Back to Login</a>
+  </div>
 {% endblock %}
