--- a/authentication/templates/authentication/password_reset_form.html
+++ b/authentication/templates/authentication/password_reset_form.html
@@ -1,11 +1,17 @@
 {% extends 'authentication/base.html' %}
+
 {% block title %}Reset Password{% endblock %}
 
+{% block header %}Reset Your Password{% endblock %}
+{% block subheader %}Enter your email address to receive reset instructions{% endblock %}
+
 {% block content %}
-  <h2>Reset Your Password</h2>
-  <form method="post">
+  <form method="post" class="login-form">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Send Reset Email</button>
+    <button type="submit" class="login-button">Send Reset Email</button>
   </form>
+  <div class="register-link">
+    <a href="{% url 'auth:login' %}">Back to Login</a>
+  </div>
 {% endblock %}
