--- a/authentication/templates/authentication/password_reset_complete.html
+++ b/authentication/templates/authentication/password_reset_complete.html
@@ -1,7 +1,13 @@
 {% extends 'authentication/base.html' %}
+
 {% block title %}Password Reset Complete{% endblock %}
 
+{% block header %}Password Reset Successful{% endblock %}
+{% block subheader %}You can now log in with your new password{% endblock %}
+
 {% block content %}
-  <h2>Password Reset Successful</h2>
-  <p>Your password has been set. You can now <a href="{% url 'auth:login' %}">log in</a>.</p>
+  <div style="text-align: center;">
+    <p>Your password has been set. You can now <a href="{% url 'auth:login' %}">log in</a>.</p>
+    <a href="{% url 'core:home' %}" class="resend-button">Go to Homepage</a>
+  </div>
 {% endblock %}
