--- a/authentication/templates/authentication/password_reset_confirm.html
+++ b/authentication/templates/authentication/password_reset_confirm.html
@@ -1,11 +1,17 @@
 {% extends 'authentication/base.html' %}
+
 {% block title %}Enter New Password{% endblock %}
 
+{% block header %}Enter Your New Password{% endblock %}
+{% block subheader %}Create a new password for your account{% endblock %}
+
 {% block content %}
-  <h2>Enter Your New Password</h2>
-  <form method="post">
+  <form method="post" class="login-form">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Set New Password</button>
+    <button type="submit" class="login-button">Set New Password</button>
   </form>
+  <div class="register-link">
+    <a href="{% url 'core:home' %}">Go to Homepage</a>
+  </div>
 {% endblock %}
