--- a/templates/emails/password_reset_confirmed.html
+++ b/templates/emails/password_reset_confirmed.html
@@ -3,8 +3,23 @@
 {% block subject %}Your Password has been changed - MaishaGala{% endblock %}
 
 {% block content %}
-  <h2>Password Changed</h2>
-  <p>Hello {{ username }},</p>
-  <p>This is to let you know that your password was successfully changed.</p>
-  <p>If you did not perform this action, please contact support or reset your password again immediately.</p>
+  <h1 style="color: #1e8858; font-size: 24px; margin-bottom: 20px;">
+    Password Changed Successfully
+  </h1>
+
+  <p style="font-size: 16px; color: #333;">
+    Hello <strong style="color: #1a93b0;">{{ username }}</strong>,
+  </p>
+
+  <p style="font-size: 16px; color: #333;">
+    We're letting you know that your password was successfully changed.
+  </p>
+
+  <p style="font-size: 16px; color: #333;">
+    If you did not perform this action, we strongly recommend resetting your password again or contacting our support team immediately.
+  </p>
+
+  <p style="font-size: 14px; color: #666; margin-top: 20px;">
+    ❤️ The MaishaGala Team
+  </p>
 {% endblock %}
