--- a/authentication/templates/authentication/password_reset_complete.html
+++ b/authentication/templates/authentication/password_reset_complete.html
@@ -2,12 +2,49 @@
 
 {% block title %}Password Reset Complete{% endblock %}
 
-{% block header %}Password Reset Successful{% endblock %}
+{% block header %}Password Successfully Reset{% endblock %}
 {% block subheader %}You can now log in with your new password{% endblock %}
 
+{% block extra_css %}
+<style>
+    .resend-link {
+      display: inline-block;
+      background-color: var(--primary-color);
+      color: var(--white);
+      padding: 0.6rem 1.2rem;
+      border-radius: 4px;
+      font-size: 0.95rem;
+      text-decoration: none;
+      font-weight: 500; 
+    }
+    .resend-link:hover {
+      background-color: var(--primary-color-dark);
+    }
+    .center-message {
+        text-align: center;
+        font-size: 1rem;
+    }
+
+    .login-button {
+        background-color: var(--primary-color);
+        color: var(--white);
+        padding: 0.6rem 1.2rem;
+        border: none;
+        border-radius: 4px;
+        font-size: 1rem;
+        margin-top: 1rem;
+        cursor: pointer;
+    }
+
+    .login-button:hover {
+        background-color: var(--primary-color-dark);
+    }
+</style>
+{% endblock %}
+
 {% block content %}
-  <div style="text-align: center;">
-    <p>Your password has been set. You can now <a href="{% url 'auth:login' %}">log in</a>.</p>
-    <a href="{% url 'core:home' %}" class="resend-button">Go to Homepage</a>
+  <div class="center-message">
+    <p>Your password has been reset successfully.</p>
+    <a class="login-button resend-link" href="{% url 'auth:login' %}">Log In</a>
   </div>
 {% endblock %}
